[package]
name = "conway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
env_logger = "0.10"
error-iter = "0.4"
getrandom = "0.2"
line_drawing = "1"
log = "0.4"
pixels = "0.13.0"
rand = "0.8.5"
rayon = "1.7.0"
winit = "0.28"
winit_input_helper = "0.14"
